--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.avi filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
